test/mulberry/Language/default_readonly_parameter_alias_error.mulberry
# RUN: not mulberry-driver -dump=mlir %s 2>&1 | FileCheck %s

fn appendAlias(values: List<UInt64>): UInt64 {
  var alias: List<UInt64> = values;
  return alias.size();
}

fn main(): UInt64 {
  var values: List<UInt64> = list.from([1, 2, 3]);
  return appendAlias(values);
}

# CHECK: error: cannot bind readonly object to mutable variable
